2003-11-13  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.[c,h]: New folder-tree widget that replaces the
	shell's folder-tree widget.

	* em-folder-tree-model.[c,h]: New source files subclassing
	GtkTreeStore for handling the mess that is drag&drop.

	* em-folder-selection-button.c: Ported to use EMFolderTree.

	* em-folder-selection.c: Ported to use EMFolderTree.

	* em-folder-selector.c: Ported to use EMFolderTree.

	* mail-component.c: Ported to use EMFolderTree.

	* mail-offline-handler.c (storage_go_online): Updated to not pass
	a storage argument.

	* mail-folder-cache.c: Removed storage stuff.

	* mail-send-recv.c (receive_update_got_store): Don't do EStorage*
	stuff anymore.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c (impl__get_userCreatableItems): New,
	implementation for the Component.userCreatableItems attribute.
	(impl_requestCreateItem): New, implementation for the
	Component.requestCreateItem() method.
	(mail_component_class_init): Install.

2003-11-13  Radek Doulik  <rodo@ximian.com>

	* em-junk-filter.c (em_junk_sa_is_available): new helper function,
	use it before any call to spamassassin, spamc and sa-learn
	(em_junk_sa_test_spamd): first test if spamassassin is available
	(em_junk_sa_test_spamd): rename em_junk_sa_spamd_tested to
	em_junk_sa_tested, always set em_junk_sa_tested

	* mail-folder-cache.c (folder_changed): don't call
	CAMEL_IS_VJUNK_FOLDER, it was added by mistake

2003-11-13  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (em_format_html_add_pobject): use malloc0 for
	the pobject memory.

2003-11-12  Not Zed  <NotZed@Ximian.com>

	* mail-account-gui.c (smime_sign_key_select)
	(smime_encrypt_key_select, smime_encrypt_key_selected)
	(smime_sign_key_selected): implement the key selector popup using
	e-cert-selector.

2003-11-11  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (efh_application_xpkcs7mime): output icons of
	the status.