@@ -82,6 +82,8 @@ void         mail_component_storages_foreach   (MailComponent *component,
 						GHFunc         func,
 						void          *data);
 
+void mail_component_remove_folder (MailComponent *component, CamelStore *store, const char *path);
+
 EMFolderTreeModel *mail_component_get_tree_model (MailComponent *component);
 
 char *em_uri_from_camel (const char *curi);
